# action-detection

./: DOC_CH.md  DOC_EN.md  README.md  patch_mmaction.py  pyproject.toml  verify_pipeline.py
configs/: stgcnpp_config.py
src/: __main__.py  action_recognizer.py  download_models.py  main.py  pipeline.py  pose_estimator.py  skeleton_converter.py  visualize.py
tests/: conftest.py  test_action_recognizer.py  test_pipeline_integration.py  test_pose_estimator.py  test_skeleton_converter.py  test_visualize.py
